--- a/css/style.css
+++ b/css/style.css
@@ -4,91 +4,17 @@ html {
 }
 
 body {
-  margin-bottom: 220px;
+  margin-bottom: 130px;
   font-family:'Gotham SSm';
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 220px;
-  background-color: #333;
-  color: #efefef;
-  padding: 30px 0;
-}
-.footer a {
-  color: #639bcf;
-}
-.footer a:hover {
-  color: #d8e6f3;
-}
-
-.cta {
-	background-color: #29B68D; 
-	color: white;
-	margin-left:20px;
-	width:254px;
-	height:51px;
-	border: none;
-	font-size:18px;
-	letter-spacing: 3px;
-}
-
-.email {
-	width:245px;
-	height:50px;
-	font-size:17px;
-	color: black;
-	padding-left: 10px;
-	border: 1.5px solid #BABBC1;
-}
-
-
-@media only screen and (max-width: 768px) {
-  body {
-    margin-bottom: 400px;
-  }
-
-  .footer {
-    height: 400px;
-  }
-
-  .dropdown-menu > li > a {
-    color: #d8e6f3;
-  }
-}
-.well {
-  background-color: transparent;
-}
-
-.headline {
-	color: #36373D;
-	line-height:1.5em !important;
-	font-size: 2.6em !important;
-	padding-top:15px;
-	
-}
-
-
-.lead {
-  color: #555;
-	line-height:2.3em;
-	font-size:1.3em;
-
-	
-}
-
-.btn-lg {
-  padding: 14px 20px;
-  margin-right: 20px;
-}
-
+/*Nav bar */
 .navbar {
   background-color: #36373E;
 }
 .navbar .logo {
   width: 110px;
+	
 }
 .navbar a {
   color: #BABBC1;
@@ -164,13 +90,193 @@ body {
 }
 .navbar {min-height:38px;}
 
+
+
+/*Hero*/
+
+
 .background-sf {
 		margin: -20px 0 50px 0;
-		height: 307px;
+		height: 22em;
     background-image: url(//dmrxx81gnj0ct.cloudfront.net/assets/backgrounds/sf-67683a5f49f4ea1655f23aa02549752f.jpg);
 		
 		background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 		
+}
+.cta {
+	background-color: #29B68D; 
+	color: white;
+	margin-left:20px;
+	width:254px;
+	height:51px;
+	border: none;
+	font-size:18px;
+	letter-spacing: 3px;
+}
+
+.email {
+	width:245px;
+	height:50px;
+	font-size:17px;
+	color: black;
+	padding-left: 10px;
+	border: 1.5px solid #BABBC1;
+}
+
+.headline {
+	color: #36373D;
+	line-height:1.5em !important;
+	font-size: 2.6em !important;
+	padding-top:15px;
+	
+}
+
+
+.lead {
+  color: #555;
+	line-height:2.3em;
+	font-size:1.3em;
+}
+
+.employer-text, .employer-text a {
+	padding-top: 25px;
+	font-size: 12px;
+	letter-spacing: 0;
+	text-decoration: none;
+}
+
+
+.btn-lg {
+  padding: 14px 20px;
+  margin-right: 20px;
+}
+
+
+.well {
+  background-color: transparent;
+}
+
+/*How it work */
+.How-it-works h1 {
+	font-size: 30px !important;
+	padding-bottom: 40px;
+	margin-left: 43%;
+	margin-top: 52px;
+}
+
+.How-it-works-list li{
+	margin-left: 33%;
+	padding-bottom: 25px;
+} 
+
+.How-it-works-list {
+    counter-reset: poolball-list-counter;
+    list-style: none;
+		padding-bottom: 5rem
+}
+
+.How-it-works-list>li {
+    font-size: 1.4rem;
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    position: relative
+}
+
+.How-it-works-list>li:last-child {
+    margin-bottom: 0
+}
+
+.How-it-works-list>li::before {
+    background-color: #36373E;
+    border-radius: 10rem;
+    color: #FFFFFF;
+    content: counter(poolball-list-counter);
+    counter-increment: poolball-list-counter;
+    display: inline-block;
+    height: 3.2rem;
+    left: 0;
+    line-height: 3.2rem;
+    margin-left: -4.6rem;
+    margin-top: -1.6rem;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 3.2rem;
+    z-index: 1
+}
+
+.How-it-works-list>li::after {
+    border-left: 1px solid #36373E;
+    border-right: 1px solid transparent;
+    bottom: 0;
+    content: "";
+    height: 140%;
+    left: 0;
+    margin-left: -3rem;
+    margin-top: 0;
+    position: absolute;
+    top: 3.2rem;
+    width: 0;
+    z-index: 0
+}
+
+.How-it-works-list>li:last-child::after {
+    display: none
+}
+
+.Customers {
+ background-color: #F1F2F4;
+}
+
+/*Footer*/
+
+.footer {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  height: 100px;
+  background-color: #F1F2F4;
+  color: #DEE0E5;
+  padding: 30px 0;
+	border-top: 1px solid #DEE0E5;
+	font-size: 12px
+}
+.footer a {
+  color: #ACADB4;
+}
+.footer a:hover {
+  color: #53545B;
+}
+
+.footer .footer-first-line li {
+
+padding: 0 19.8px;
+}
+
+.footer .footer-second-line li {
+font-size: 10px;
+	padding-right: 20px;
+	padding-top: 7px
+}
+
+
+/*Media Quieries*/
+@media only screen and (max-width: 768px) {
+  body {
+    margin-bottom: 400px;
+  }
+
+  .footer {
+    height: 400px;
+  }
+
+  .dropdown-menu > li > a {
+    color: #d8e6f3;
+  }
+	.logo{
+	vertical-align: center;
+	}
 }
